--- a/06_canvas/index.html
+++ b/06_canvas/index.html
@@ -1,7 +1,4 @@
-{#Clement Chan and William Cao#}
-{#SoftDev1 pd1#}
-{#K05 - #}
-{#2020-02-#}
+
 
 <!DOCTYPE html>
 <html>
@@ -21,12 +18,7 @@
 <br>
 <button id = "clear"> Clear </button>
 <br><br>
-Mode:
-<form>
-    <label id="modeDisplay"> rectangle </label>
-    <input type="submit" id="switch" value="Switch">
-</form>
-<script src = "clickdraw.js"></script>
+<script src = "dotconn.js"></script>
 </body>
 
 </html>
