--- a/14_svg/base.html
+++ b/14_svg/base.html
@@ -4,7 +4,10 @@
 <body>
 <svg id="vimage" height="500" width="500" style="border: 1px solid;">
 </svg>
+<br>
 <button id="clear">Clear</button>
+<button id="move">Move</button>
+<button id="xtra">Xtra</button>
 </body>
 <script src="svg.js"></script>
 </html>
