--- a/14_svg/base.html
+++ b/14_svg/base.html
@@ -8,6 +8,9 @@
 <button id="clear">Clear</button>
 <button id="move">Move</button>
 <button id="xtra">Xtra</button>
+<br>
+<button id="dummy" style="visibility:hidden;">Clear.</button>
+<button id="stop" style="visibility:hidden;">Stop</button>
 </body>
 <script src="svg.js"></script>
 </html>
