--- a/16_d3/00/index.html
+++ b/16_d3/00/index.html
@@ -5,10 +5,10 @@
     steelblue bars, white number overlays indicating (width in px)*10
   -->
 <!--
-    Clyde "Thluffy" Sinclair
-    SoftDev2 pd0
-    2099-12-31
-  -->
+Henry Liu and Clement Chan
+SoftDev2 pd0
+2020-04-02
+-->
 
 
 <style>
